<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_qualify">

    <fragment
        android:id="@+id/nav_qualify"
        android:name="com.smarltines.buhwarfull.colon.ui.qualify.QualifyFragment"
        android:label="@string/menu_calificar"
        tools:layout="@layout/fragment_qualify" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.smarltines.buhwarfull.colon.ui.statistics.StatisticsFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_visit"
        android:name="com.smarltines.buhwarfull.colon.ui.visit.VisitFragment"
        android:label="@string/menu_visitas"
        tools:layout="@layout/fragment_visit" />

    <fragment
        android:id="@+id/nav_helper"
        android:name="com.smarltines.buhwarfull.colon.ui.helper.HelperFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_helper" />

    <fragment
        android:id="@+id/nav_guard"
        android:name="com.smarltines.buhwarfull.colon.ui.guard.SendFragment"
        android:label="@string/menu_guardias"
        tools:layout="@layout/fragment_incidents" />
    <activity
        android:id="@+id/nav_rondin"
        android:name="com.smarltines.buhwarfull.colon.activity.MapsActivity"
        android:label="Rondin"
        tools:layout="@layout/activity_maps" />



</navigation>